<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/username"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_marginTop="16dp"
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="55dp"
        android:id="@+id/username"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/username"/>

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:background="@drawable/butao_forma"
        android:onClick="login"/>
</RelativeLayout>