<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/finalbig"
            android:id="@+id/imageView7"
            android:scaleType="fitXY" />

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="155dp"
            android:background="#A000"
            android:layout_height="100dp">

            <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numberPictures"
                android:textColor="#FFF"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/textView5"
                android:layout_alignRight="@+id/textView5"
                android:layout_alignEnd="@+id/textView5" />

            <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userSaves"
                android:layout_marginRight="35dp"
                android:layout_marginEnd="35dp"
                android:textColor="#FFF"
                android:layout_below="@+id/textView3"
                android:layout_alignRight="@+id/textView3"
                android:layout_alignEnd="@+id/textView3" />

            <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userTracks"
                android:textColor="#FFF"
                android:layout_below="@+id/textView5"
                android:layout_centerHorizontal="true" />

            <TextView
                android:text="@string/orders_saved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginStart="23dp"
                android:id="@+id/textView3"
                android:textColor="#FFF"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/tracks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textColor="#FFF"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:text="@string/pictures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="33dp"
                android:layout_marginEnd="33dp"
                android:id="@+id/textView5"
                android:textColor="#FFF"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="220dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:background="@color/colorAzulClaro">

        <TextView
            android:text="@string/label_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="18sp"
            android:textColor="@color/preto"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="18dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="10dp" />

        <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textSize="18sp"
            android:textColor="@color/preto"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textSize="18sp"
            android:textColor="@color/preto"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_below="@+id/textView9"
            android:layout_alignLeft="@+id/textView9"
            android:layout_alignStart="@+id/textView9"
            android:layout_marginRight="10dp" />

        <Button
            android:text=""
            android:layout_width="34dp"
            android:layout_height="31dp"
            android:id="@+id/editMail"
            android:layout_row="2"
            android:layout_column="2"
            android:background="@drawable/edit_button"
            android:layout_alignBottom="@+id/textView9"
            android:layout_marginLeft="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="editMail"/>

        <TextView
            android:text="TextView"
            android:layout_height="wrap_content"
            android:id="@+id/user_email"
            android:background="@color/cinzentoClaro"
            android:textColor="@color/branco"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="5dp"
            android:layout_width="120dp"
            android:textSize="10sp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_alignLeft="@+id/user_username"
            android:layout_alignStart="@+id/user_username"
            android:layout_toLeftOf="@+id/editMail"
            android:layout_toStartOf="@+id/editMail"
            android:layout_alignBottom="@+id/textView9"/>

        <TextView
            android:text="TextView"
            android:layout_height="wrap_content"
            android:id="@+id/user_username"
            android:background="@color/cinzentoClaro"
            android:textColor="@color/branco"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="5dp"
            android:layout_width="120dp"
            android:textSize="10sp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toLeftOf="@+id/editMail"
            android:layout_toStartOf="@+id/editMail"
            android:layout_toEndOf="@+id/textView2"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:background="@color/cinzentoClaro"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="5dp"
            android:layout_width="120dp"
            android:layout_row="2"
            android:layout_column="1"
            android:text="*************"
            android:layout_alignLeft="@+id/user_email"
            android:layout_alignStart="@+id/user_email"
            android:layout_toLeftOf="@+id/editPassword"
            android:layout_toStartOf="@+id/editPassword"
            android:layout_alignBottom="@+id/textView10"
            android:textSize="10sp" />

        <Button
            android:text=""
            android:layout_width="34dp"
            android:layout_height="31dp"
            android:id="@+id/editPassword"
            android:layout_row="2"
            android:layout_column="2"
            android:background="@drawable/edit_button"
            android:layout_alignBottom="@+id/textView12"
            android:layout_marginLeft="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="editPassword"/>

    </RelativeLayout>

</RelativeLayout>